2000-10-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/selfcheck.c (check_disk): Write an appropriate
	message if the disk name start with '//' and the program is DUMP
	or SAMBA is not compiled in.

2000-10-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (handle_chunker_result): The dumpsize is
	the third argument, not the fourth.

2000-10-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (handle_chunker_result): don't check
	pending_aborts, call event_release() ob ABORT-FINISHED.

2000-10-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/chunker.c (databuf_flush): workaround to prevent a
	hang on a ABORT command.

2000-10-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (continue_dumps): set estimate to more than 
	what is already use instead of setting no_hold=1 when a disk
	don't fit on holding disk.

2000-10-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/chunker.c: chunker was broken after RQ-MORE-DISK.

2000-10-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: add '&' when calling &usage() 
	or &dump_size().

2000-10-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	reported by The Hermit Hacker <scrappy@hub.org>

	* changer-src/chg-chio.pl.in: remove unused $libexecdir.

2000-10-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	reported by The Hermit Hacker <scrappy@hub.org>

	* changer-src/chg-chio.pl.in: remove comma after LOG, 
	typo: r should be 0.

2000-10-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/INDEXING: doc updated.

2000-10-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* AUTHORS: add Thomas Hepper.

2000-10-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.c (chunker_cmd): send ABORT command.

2000-10-13  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
